# nonlocalgames

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  chsh.ipynb  chshenv.py  finetune.ipynb  g14.ipynb  hamiltonians.py  ibm.ipynb  poster_figures.ipynb  pyproject.toml  qinfo.py  test_hamiltonians.py  test_qinfo.py
.github/workflows/: python-package-conda.yml
circuits/: g14_0_13.qasm  g14_0_2.qasm  g14_10_10.qasm  g14_10_13.qasm  g14_10_4.qasm  g14_10_8.qasm  g14_11_11.qasm  g14_11_13.qasm  g14_11_5.qasm  g14_11_7.qasm  g14_12_12.qasm  g14_12_13.qasm  g14_12_3.qasm  g14_12_6.qasm  g14_13_0.qasm  g14_13_10.qasm  g14_13_11.qasm  g14_13_12.qasm  g14_13_13.qasm  g14_13_3.qasm  g14_13_6.qasm  g14_13_7.qasm  g14_13_8.qasm  g14_13_9.qasm  g14_1_0.qasm  g14_1_1.qasm  g14_1_13.qasm  g14_1_2.qasm  g14_2_0.qasm  g14_2_1.qasm  g14_2_13.qasm  g14_2_2.qasm  g14_2_7.qasm  g14_3_0.qasm  g14_3_11.qasm  g14_3_12.qasm  g14_4_0.qasm  g14_4_10.qasm  g14_4_3.qasm  g14_4_9.qasm  (+19 more)
circuits/4q/: g14_4q_0_0.qasm  g14_4q_0_1.qasm  g14_4q_0_13.qasm  g14_4q_0_2.qasm  g14_4q_0_3.qasm  g14_4q_0_4.qasm  g14_4q_10_10.qasm  g14_4q_10_13.qasm  g14_4q_10_3.qasm  g14_4q_10_6.qasm  g14_4q_10_7.qasm  g14_4q_11_11.qasm  g14_4q_11_13.qasm  g14_4q_11_3.qasm  g14_4q_11_5.qasm  g14_4q_11_8.qasm  g14_4q_12_12.qasm  g14_4q_12_13.qasm  g14_4q_12_4.qasm  g14_4q_12_5.qasm  g14_4q_12_7.qasm  g14_4q_13_0.qasm  g14_4q_13_1.qasm  g14_4q_13_10.qasm  g14_4q_13_11.qasm  g14_4q_13_12.qasm  g14_4q_13_13.qasm  g14_4q_13_2.qasm  g14_4q_13_3.qasm  g14_4q_13_4.qasm  g14_4q_13_5.qasm  g14_4q_13_6.qasm  g14_4q_13_7.qasm  g14_4q_13_8.qasm  g14_4q_13_9.qasm  g14_4q_1_0.qasm  g14_4q_1_1.qasm  g14_4q_1_13.qasm  g14_4q_1_2.qasm  g14_4q_1_5.qasm  (+48 more)
circuits/bell_pair/: g14_bell_pair_0_0.qasm  g14_bell_pair_0_1.qasm  g14_bell_pair_0_13.qasm  g14_bell_pair_0_2.qasm  g14_bell_pair_0_3.qasm  g14_bell_pair_0_4.qasm  g14_bell_pair_10_10.qasm  g14_bell_pair_10_13.qasm  (+80 more)
data/: dpo.json  g14_responses.csv  g14_state.json  g14_trials.csv  g14_win_rate.csv  metadata.md  seeds.txt
examples/: compressed_strategy.ipynb  export_circuits.py  loading_circuits.ipynb
notes/: Dual-Phase Optimization.md  G14.md
tests/: test_ansatze.py  test_envs.py  test_exported_qasm.py  test_hamiltonians.py  test_measurement_layers.py  test_qinfo.py  test_strategy.py
(+303 files in other folders)
