[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlocalgames"
version = "0.0.1"
authors = [
  { name="Jim Furches", email="jim.furches@gmail.com" },
]
description = "Algorithms for solving Bell non-local games"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "gymnasium>=0.26.0",
    "numpy>=1.23.5",
    "scipy>=1.10.0",
    "openfermion>=1.5.1",
    "qiskit>=0.43.0",
    "qiskit-ibm-provider>=0.6.0",
    "ray[rllib]>=2.6.0",
    "adaptgym>=0.0.1"
]

[project.urls]
repository = "https://github.com/jfurches/nonlocalgames"