[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlocalgames"
version = "0.0.1"
authors = [
  { name="Jim Furches", email="jim.furches@gmail.com" },
]
description = "Algorithms for solving Bell non-local games"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.23.5",
    "scipy>=1.10.0",
    "openfermion>=1.5.1",
    "qiskit>=0.43.0",
    "qiskit-ibm-provider>=0.6.0",
    "qiskit-aer>=0.13.1",
    "adaptgym>=0.0.1",
    "joblib"
]

[project.urls]
repository = "https://github.com/jfurches/nonlocalgames"